--- a/src/components/Task/style.css
+++ b/src/components/Task/style.css
@@ -23,3 +23,9 @@
     text-align: center;
     margin-bottom: 0.25rem;
 }
+
+:local(textarea) {
+    width: 100%;
+    background: #ffffff00;
+    border: 1px solid lightgray;
+}
